Fixed bug #43533 (escapeshellarg('') returns null).

# Backport of code from 5.3